--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
  <link rel="stylesheet" href="new.css">
-<link rel="stylesheet" href="font-awesome.min.css">
-<meta name="viewport" content="width=device-with,initial scale1.0">
+<link rel="stylesheet" href="../css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body><fieldset>
 <h1>Sign in</h1>
